[package]
name = "dart-quic-ffi"
version = "0.1.0"
edition = "2024"
description = "Native Rust bindings for QUIC protocol using Quinn, designed for Dart FFI"

[lib]
name = "dart_quic_ffi"
crate-type = ["cdylib"]

[features]
default = ["dynamic"]
dynamic = []     
static = []

[dependencies]
quinn = "0.11.9"
tokio = { version = "1.28.1", features = ["full"] }
rustls = { version = "0.23.5", default-features = false, features = ["std", "ring"] }
rustls-platform-verifier = "0.6"
rcgen = "0.14"
rustls-pemfile = "2"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
allo-isolate = "0.1"
libc = "0.2"
once_cell = "1.19"
parking_lot = "0.12"
crossbeam = "0.8"
crossbeam-queue = "0.3"
bytes = "1.5"
futures = "0.3"

[build-dependencies]
cbindgen = "0.29"

